package com.cbs.vector.dto;

import jakarta.validation.constraints.Min;
import jakarta.validation.constraints.NotNull;
import jakarta.validation.constraints.Size;
import lombok.Data;

import java.time.LocalDateTime;
import java.util.UUID;

@Data
public class PaymentDto {

    // Response fields
    private Long paymentID; // Typically generated by the system/database
    private String status;  // Typically generated by the system/service
    private LocalDateTime timestamp; // Typically generated by the system/service

    // Request/Common fields with validation
    @NotNull(message = "Ride ID is required")
    private UUID rideID;

    @NotNull(message = "User ID is required")
    private UUID userID;

    @NotNull(message = "Amount is required")
    @Min(value = 1, message = "Amount must be greater than zero")
    private Double amount;

    @NotNull(message = "Payment method is required")
    @Size(min = 2, max = 20, message = "Method must be between 2 and 20 characters")
    private String method;

    // Request fields
    @NotNull(message = "Pickup location is required")
    private String pickupLocation;

    @NotNull(message = "Drop location is required")
    private String dropLocation;

    private String receipientEmail;

}