package com.cbs.vector.model;

public enum DriverRole {
    DRIVER,
    ADMIN,
    STAFF
}