package com.cbs.vector.model;

public enum DriverStatus {
    AVAILABLE,
    UNAVAILABLE,
    ON_TRIP,
    OFFLINE
}