package com.cbs.vector.model.enums;

public enum UserRole {
    RIDER,
    DRIVER
}
